# ImageRecognitionDemo

./: README.md  pyproject.toml
src/imageRecognition/: main.py  object_classification.py  object_detection.py  object_segmentation.py  style_transformation.py  utils.py
